# advent-of-code

./: .gitignore  adv03.py  adv04.py  adv05.c  adv06.py  adv09.c  adv10.py  adv11.py  adv13.py  adv14.py  adv15.c  adv16.py  adv17.py  adv19.c  adv20.c  adv21.py  adv24.py  adv25.py
2015/: adv01.lisp  adv02.lisp  adv03.lisp  adv05.lisp  adv06.lisp  adv07.lisp
2017/: adv04.py  adv05.py  adv07.py  adv08.py  adv10.py  adv12.py  adv15.py  adv17.py  adv18.py  adv22.py
2018/: .gitignore  adv01.scm  adv02.scm  adv03.scm  adv04.scm  adv05.scm  adv06.scm  adv07.scm  adv08.scm  adv09.scm  adv10.scm  adv11.scm  adv12.scm  adv13.scm  adv14.scm  adv15.scm  adv16.scm  adv17.scm  adv18.scm  adv19.scm  adv20.scm  adv21.scm  adv22.scm  adv23.scm  adv24.scm  adv25.scm  common.scm  linked-list.scm  my-graph.scm
2019/: .gitignore
2019/day19/: Cargo.toml
2019/day19/src/: intcode.rs  main.rs
2020/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
2021/: 01.clj  02.clj  03.clj  04.clj  05.clj  06.clj  07.clj  08.clj  09.clj  10.clj  11.clj  12.clj  13.clj  14.clj  15.clj  16.clj  17.clj  18.clj  19.clj  20.clj  21.clj  22.clj  23.clj  24.clj  25.clj
2022/: .gitignore  advent.erl  day01.erl  day02.erl  day03.erl  day04.erl  day05.erl  day06.erl  day07.erl  day08.erl  day09.erl  day10.erl  day11.erl  day12.erl  day13.erl  day14.erl  day15.erl  day16.erl  day17.erl  day18.erl  day19.erl  day20.erl  day20.py  day21.erl  day22.erl  day23.erl  day24.erl  (+1 more)
(+121 files in other folders)
