[package]
name = "day19"
version = "0.1.0"
authors = ["aragaer <aragaer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
getopts = "0.2"
itertools = "0.8.2"
num_enum = "0.4.2"
num-traits = "0.2"
num-derive = "0.3"
